--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 cards:
-  message: "Hey, welcome to EazyBank cards related prod APIs"
+  message: "Welcome to AniBank cards Prod APIs "
   contactDetails:
-    name: "Sandra Harald - Product Owner"
-    email: "sandra@eazybank.com"
+    name: "Animish Sharma- Developer"
+    email: "animishharitash@gmail.com"
   onCallSupport:
-    - (617) 432-2356
-    - (936) 564-8721
+    - (91) 956-3254
+    - (91) 651-3274
