--- a/cards.yml
+++ b/cards.yml
@@ -1,11 +1,29 @@
+server:
+  port: 9000
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+  h2:
+    console:
+      enabled: true
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
 build:
   version: "3.0"
 
+
 cards:
-  message: "Welcome to EazyBank cards related local APIs "
+  message: "Welcome to AniBank cards APIs "
   contactDetails:
-    name: "Dragos Lech - Developer"
-    email: "dragos@eazybank.com"
+    name: "Animish Sharma- Developer"
+    email: "animishharitash@gmail.com"
   onCallSupport:
-    - (412) 419-3491
-    - (915) 382-1932
+    - (91) 936-3254
+    - (91) 631-3274
