--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 loans:
-  message: "Hey, welcome to EazyBank loans related prod APIs "
+  message: "Welcome to AniBank loans Prod APIs "
   contactDetails:
-    name: "Pelias Sudhir - Product Owner"
-    email: "pelias@eazybank.com"
+    name: "Animish Sharma - Developer"
+    email: "animishharitash@gmail.com"
   onCallSupport:
-    - (723) 656-8709
-    - (156) 342-0956
+    - (91) 936-1255
+    - (91) 631-1275
