--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -2,10 +2,10 @@ build:
   version: "2.0"
 
 loans:
-  message: "Welcome to EazyBank loans related QA APIs "
+  message: "Welcome to AniBank loans QA APIs "
   contactDetails:
-    name: "Cyrano Marita - QA Lead"
-    email: "cyrano@eazybank.com"
+    name: "Animish Sharma - Developer"
+    email: "animishharitash@gmail.com"
   onCallSupport:
-    - (785) 545-6565
-    - (853) 546-3467
+    - (91) 936-1256
+    - (91) 631-1276
